<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:id="@+id/second_main"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/myBlue"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_cardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardElevation="7dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="#EFF0F1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profilePage_Image"
                android:layout_width="103dp"
                android:layout_height="114dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/profile_picture"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.195" />

            <TextView
                android:id="@+id/profilePage_name"
                style="@style/profile_page_texts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="4dp"
                android:text="Name"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/profilePage_gender"
                app:layout_constraintStart_toEndOf="@+id/profilePage_Image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/profilePage_email"
                style="@style/profile_page_texts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="email address"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/profilePage_number"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/profilePage_number"
                style="@style/profile_page_texts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:text="mobile number"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/profilePage_gender"
                style="@style/profile_page_texts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="40dp"
                android:text="Gender"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/profilePage_Image"
                app:layout_constraintTop_toTopOf="@+id/profilePage_Image" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
</layout>